--- a/index.html
+++ b/index.html
@@ -6,83 +6,7 @@
 </head>
 
 <body>
-    <article>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images2m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images1m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images3m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images4m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images5m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images6m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images12m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images13m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images14m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images15m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images16m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images17m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images18m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images19m.jpg">
-            </div>
-        </section>
-        <section>
-            <div class="images">
-                <img src="http://nicesnippets.com/demo/images20m.jpg">
-            </div>
-        </section>
-    </article>
+    <meta http-equiv="refresh" content="1;url=https:/senikurni.vercel.app/" />
 </body>
 
 </html>
