--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <meta http-equiv="refresh" content="1;url=https:/senikurni.vercel.app/" />
+    <meta http-equiv="refresh" content="1;url=https://senikurni.vercel.app/" />
 </body>
 
 </html>
