--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-    <meta http-equiv="refresh" content="1;url=https://senikurni.vercel.app/" />
+    <script type="text/javascript">
+         window.location.href = 'https://senikurni.vercel.app/'; 
+    </script>
 </body>
 
 </html>
