--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <script type="text/javascript">
-         window.location.href = 'https://adhikurni.framer.website/'; 
+         window.location.href = 'https://kurniawanadhi.framer.website/'; 
     </script>
 </body>
 
